<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        tools:text="@string/sample_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingStart="25dp"
        android:paddingEnd="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_price"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        tools:text="@string/sample_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/item_name"
        app:layout_constraintEnd_toStartOf="@id/item_quantity"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        tools:text="@string/sample_quantity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/item_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="60dp"
        android:paddingEnd="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>