<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ItemDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/app_bar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_back_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/fragment_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_detail"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:fontFamily="cursive"
                    app:layout_constraintStart_toEndOf="@id/back_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="15dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_detail_card"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/item_name_head"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/item_name"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="0.6"/>

                    <TextView
                        android:id="@+id/item_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="@string/sample_name"
                        android:textSize="18sp"
                        android:layout_weight="1.4"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/item_price_head"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="0.6"/>

                    <TextView
                        android:id="@+id/item_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="@string/sample_price"
                        android:textSize="18sp"
                        android:layout_weight="1.4"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/item_quantity_head"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_weight="0.6"/>

                    <TextView
                        android:id="@+id/item_quantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="@string/sample_quantity"
                        android:textSize="18sp"
                        android:layout_weight="1.4"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sell_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:backgroundTint="@color/app_bar"
        app:layout_constraintTop_toBottomOf="@id/item_detail_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/app_bar"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/sell_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_edit"
        app:tint="@color/white"
        android:contentDescription="@null"
        android:importantForAccessibility="no"/>

</androidx.constraintlayout.widget.ConstraintLayout>